--- a/RAG-System-Eval-DeepDive-mlflow.ipynb
+++ b/RAG-System-Eval-DeepDive-mlflow.ipynb
@@ -11,8 +11,7 @@
     "    \n",
     "This notebook is a follow up from the previous [notebook](https://github.com/fhuthmacher/LLMevaluation/blob/main/LLMInformationExtraction.ipynb) and [youtube video](https://www.youtube.com/watch?v=HUuO9eJbOTk) in which we explored the overall evaluation approach and a RAG system's overall accuracy.\n",
     "\n",
-    "This notebook we will take a closer look at specific RAG evaluation metrics and explore how different RAG components impact these RAG evaluation metrics.\n",
-    "\n"
+    "This notebook we will take a closer look at specific RAG evaluation metrics and explore how different RAG components impact these RAG evaluation metrics.\n"
    ]
   },
   {
@@ -21,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Solution architecture\n",
-    "<img src=\"https://d3q8adh3y5sxpk.cloudfront.net/meetingrecordings/rageval/architecture.png\" alt=\"RAG eval architecture\" width=\"900\" height=\"550\">\n",
+    "<img src=\"./images/architecture.png\" alt=\"RAG eval architecture\" width=\"900\" height=\"550\">\n",
     "\n",
     "From the solution architecture, we will experiment with the below RAG components and evaluate the impact on several metric's relevant for RAG.\n",
     "\n",
@@ -68,7 +67,7 @@
    "id": "058b3b3a",
    "metadata": {},
    "source": [
-    "<img src=\"https://d3q8adh3y5sxpk.cloudfront.net/meetingrecordings/rageval/RAGevalmetrics.png\" alt=\"LLM selection process\" width=\"900\" height=\"550\">"
+    "<img src=\"./images/RAGevalmetrics.png\" alt=\"RAG metrics\" width=\"900\" height=\"550\">"
    ]
   },
   {
