--- a/RAG-System-Eval-DeepDive-mlflow.ipynb
+++ b/RAG-System-Eval-DeepDive-mlflow.ipynb
@@ -2220,6 +2220,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ragas_faithfulness mean: 0.9047619047619048\n",
+      "ragas_answer_relevancy mean: 0.8649994166575313\n",
+      "ragas_answer_similarity mean: 0.4875029532533604\n",
+      "ragas_answer_correctness mean: 0.5916543515130059\n",
+      "ragas_context_recall mean:: 0.8792517006802721\n",
+      "ragas_context_precision mean: 0.5079365079037037\n",
+      "llamaindex_correctness_score_mean: 3.5\n",
+      "llamaindex_semantic_similarity_score_mean: 0.5060027329036767\n",
+      "llamaindex_faithfulness_score_mean: 0.7142857142857143\n",
+      "llamaindex_relevancy_score_mean: 0.8095238095238095\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/aws-rag-system-eval/.conda/lib/python3.11/site-packages/mlflow/data/dataset_source_registry.py:150: UserWarning: The specified dataset source can be interpreted in multiple ways: LocalArtifactDatasetSource, LocalArtifactDatasetSource. MLflow will assume that this is a LocalArtifactDatasetSource source.\n",
+      "  return _dataset_source_registry.resolve(\n",
+      "/home/sagemaker-user/aws-rag-system-eval/.conda/lib/python3.11/site-packages/mlflow/data/digest_utils.py:29: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  string_columns = trimmed_df.columns[(df.applymap(type) == str).all(0)]\n"
+     ]
     }
    ],
    "source": [
@@ -2270,10 +2296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "e361a228",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TokenTextSplitter split documents in to 904 chunks.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## 2b. Create RAG system with cohere.embed-multilingual-v3\n",
     "from langchain.embeddings import BedrockEmbeddings\n",
