--- a/RAG-System-Eval-DeepDive-mlflow.ipynb
+++ b/RAG-System-Eval-DeepDive-mlflow.ipynb
@@ -282,7 +282,7 @@
     "\n",
     "\n",
     "# loading environment variables that are stored in local file dev.env\n",
-    "load_dotenv(find_dotenv('dev-mlflow.env'),override=True)\n",
+    "load_dotenv(find_dotenv('dev-rageval.env'),override=True)\n",
     "\n",
     "os.environ['OPENSEARCH_COLLECTION'] = os.getenv('OPENSEARCH_COLLECTION')\n",
     "os.environ['BEDROCK_KNOWLEDGEBASE_ID'] = os.getenv('BEDROCK_KNOWLEDGEBASE_ID')\n",
@@ -3095,7 +3095,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save the figure\n",
-    "filename = 'tokensplitter_chunksizes.png'\n",
+    "filename = './tmp/tokensplitter_chunksizes.png'\n",
     "plt.savefig(filename)\n",
     "\n",
     "plt.show()"
@@ -3123,7 +3123,7 @@
    ],
    "source": [
     "# 8.1.1.6 LLM analysis\n",
-    "image_path = \"tokensplitter_chunksizes.png\"\n",
+    "image_path = \"./tmp/tokensplitter_chunksizes.png\"\n",
     "comparison = 'token splitter chunk size of 128 vs 256 vs 512 vs 1024'\n",
     "result = analze_ragas_result_chart(image_path, comparison)\n",
     "print(result)"
@@ -4723,7 +4723,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save the figure\n",
-    "filename = 'charsplitter_chunksizes.png'\n",
+    "filename = './tmp/charsplitter_chunksizes.png'\n",
     "plt.savefig(filename)\n",
     "\n",
     "plt.show()"
@@ -4751,7 +4751,7 @@
    ],
    "source": [
     "# 8.1.2.6 LLM analysis\n",
-    "image_path = \"charsplitter_chunksizes.png\"\n",
+    "image_path = \"./tmp/charsplitter_chunksizes.png\"\n",
     "comparison = 'recursive character text splitter chunk size of 1000 vs 1500 vs 2000 vs 2500'\n",
     "result = analze_ragas_result_chart(image_path, comparison)\n",
     "print(result)\n"
@@ -5730,7 +5730,7 @@
     "\n",
     "plt.tight_layout()\n",
     "# Save the figure\n",
-    "filename = 'tokensplitter_vs_charsplitter.png'\n",
+    "filename = './tmp/tokensplitter_vs_charsplitter.png'\n",
     "plt.savefig(filename)\n",
     "plt.show()\n"
    ]
@@ -5761,7 +5761,7 @@
    ],
    "source": [
     "# 8.2.4 LLM analysis\n",
-    "image_path = \"tokensplitter_vs_charsplitter.png\"\n",
+    "image_path = \"./tmp/tokensplitter_vs_charsplitter.png\"\n",
     "comparison = 'recursive character text splitter with a chunk size of 2000 vs a token text splitter with a chunk size of 1024'\n",
     "result = analze_ragas_result_chart(image_path, comparison)\n",
     "print(result)"
@@ -6392,7 +6392,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save the figure\n",
-    "filename = 'embeddingmodels_comparison.png'\n",
+    "filename = './tmp/embeddingmodels_comparison.png'\n",
     "plt.savefig(filename)\n",
     "\n",
     "plt.show()"
@@ -6426,7 +6426,7 @@
    ],
    "source": [
     "# 8.3.4 LLM analysis\n",
-    "image_path = \"embeddingmodels_comparison.png\"\n",
+    "image_path = \"./tmp/embeddingmodels_comparison.png\"\n",
     "comparison = 'Comparing the amazon.titan-embed-text-v1 embedding model with a chunk size of 1024 against a cohere.embed-multilingual-v3 embedding model with a chunk size of 350'\n",
     "result = analze_ragas_result_chart(image_path, comparison)\n",
     "print(result)"
@@ -7249,7 +7249,7 @@
     "\n",
     "plt.tight_layout()\n",
     "# Save the figure\n",
-    "filename = 'retriever_comparison.png'\n",
+    "filename = './tmp/retriever_comparison.png'\n",
     "plt.savefig(filename)\n",
     "plt.show()"
    ]
@@ -7280,7 +7280,7 @@
    ],
    "source": [
     "# 8.4.5 LLM analysis\n",
-    "image_path = \"retriever_comparison.png\"\n",
+    "image_path = \"./tmp/retriever_comparison.png\"\n",
     "comparison = 'Comparing similarity with mmr and bedrock_kb retriever'\n",
     "result = analze_ragas_result_chart(image_path, comparison)\n",
     "print(result) "
@@ -8126,7 +8126,7 @@
     "\n",
     "plt.tight_layout()\n",
     "# Save the figure\n",
-    "filename = 'prompttemplate_comparison.png'\n",
+    "filename = './tmp/prompttemplate_comparison.png'\n",
     "plt.savefig(filename)\n",
     "\n",
     "plt.show()"
