--- a/RAG-System-Eval-DeepDive.ipynb
+++ b/RAG-System-Eval-DeepDive.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "While this notebook tracks metrics with mlflow, it is not required for the evaluation. If you want to learn more about how to configure mlflow in your environment, please refer to this [AWS Blog](https://aws.amazon.com/blogs/machine-learning/securing-mlflow-in-aws-fine-grained-access-control-with-aws-native-services/).\n",
     "\n",
-    "In this notebook we use helper functions for illustration purposes. In production, this functionality would typically be part of an evaluation pipeline for example with Amazon SageMaker Pipelines."
+    "In this notebook we use helper classes/functions for illustration purposes. In production, this functionality would typically be part of an evaluation pipeline for example with Amazon SageMaker Pipelines."
    ]
   },
   {
@@ -2117,7 +2117,6 @@
     "            retrieved_context_error = \"\"\n",
     "            reference_answer_error = \"\"\n",
     "            \n",
-    "            # RagAnswer(results,context_list,query_time,usage,cost)\n",
     "            result = rag_agent.get_answer(item['prompt'])\n",
     "\n",
     "            question = item['prompt']\n",
@@ -2401,9 +2400,9 @@
     "                        debug = False \n",
     "                    )\n",
     "\n",
-    "# rag_agent.index_documents(documents)\n",
-    "# # wait to have bulk insert complete\n",
-    "# time.sleep(60)\n",
+    "rag_agent.index_documents(documents)\n",
+    "# wait to have bulk insert complete\n",
+    "time.sleep(60)\n",
     "\n",
     "ragas_eval = RagasEval()\n",
     "rag_system_eval_details = {\n",
@@ -3892,10 +3891,9 @@
    "metadata": {},
    "source": [
     "### 8.3.5 Review Embedding models\n",
-    "Here we can observe that for context recall, context precision, and faithfulness cohere.embed-multilingual-v3 performs slightly better than any of the other embedding models, even at a smaller token chunk size such as 350.\n",
-    "We can also observe that amazon.titan-embed-text-v2 is not also more cost effective, but also outperforms amazon.titan-embed-text-v1 in most metrics. Answer relevancy is noticeably low for v1 too. Further, even though the content is in English, the cohere.embed-english-v3 model does not signficantly perform better than cohere.embed-multilingual-v3.\n",
-    " \n",
-    "As a result, we will proceed the next eval with cohere.embed-multilingual-v3 ."
+    "Here we can observe that cohere.embed-multilingual-v3 performs very well, even at a significantly smaller token chunk size such as 350.\n",
+    "We can also observe that amazon.titan-embed-text-v2 is not only more cost effective, but also outperforms amazon.titan-embed-text-v1 in context precision and answer relevancy. Answer relevancy is noticeably low for v1. Further, even though the content is in English, the cohere.embed-english-v3 model does not significantly perform better than cohere.embed-multilingual-v3.\n",
+    "As a result, we will proceed the next evaluation with cohere.embed-multilingual-v3 ."
    ]
   },
   {
@@ -4244,7 +4242,7 @@
    "source": [
     "### 8.4.6 Review “similarity” vs “mmr” vs Bedrock Knowledge Base retriever results\n",
     "\n",
-    "Bedrock's Knowledge Base Retriever with the Cohere embeddings model and default settings emerges as the best retriever.\n",
+    "Here we can observe that Bedrock Knowledge Base retriever with the Cohere embeddings model performs very well with the default settings on this dataset, and is even outperforming the other two retriever options in context recall.\n",
     "\n"
    ]
   },
@@ -4489,7 +4487,7 @@
     "# Things to improve\n",
     "\n",
     "- Compare more advanced retrieval methods and more advanced prompt templates.\n",
-    "- Include speed and cost dimension in analysis for entire RAG system (including embedding model and not just LLM) and for entire RAG eval system with RAGAS."
+    "- Include speed and cost dimension in analysis for entire RAG system (and RAGAS system) and not just track LLM and embeddings cost."
    ]
   }
  ],
